# RyoCpp

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  Ryo.code-workspace
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml
headers/: ryo.hpp
include/ryo/terminal/: bundle.hpp  stylize.hpp  terminal.hpp
include/ryo/utils/: collections.hpp  collectons.hpp
include/ryo/utils/templates/: collections.tpp
include/terminal/headers/: stylize.hpp
src/: ryo.cpp
terminal/: CMakeLists.txt
terminal/headers/: bundle.hpp  choices.hpp  keypress.hpp  prompt.hpp  stylize.hpp  terminal.hpp  yesno.hpp
terminal/resources/: choice.cpp  choices.cpp  prompt.cpp  stylize.cpp  terminal.cpp  yesno.cpp
terminal/tests/: colorize.cc
tests/: ryo.cc
utils/: CMakeLists.txt
utils/headers/: bundle.hpp  string.hpp
utils/resources/: string.cpp
utils/tests/: string.cc
